Bug 1899703, 1899971 - don't shutdownhang when quitting while DLP request is active r=dlp-reviewers,handyman

Differential Revision: https://phabricator.services.mozilla.com/D212474